# ivm-gui

./: .gitignore  README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: python-package.yml  windows-deploy.yml  windows-exe.yml  windows-package.yml
ivm-gui/: __main__.py
