[tool.poetry]
name = "ivm-gui"
version = "0.1.0"
description = ""
authors = ["Giuseppe Alfieri <galfieri@inventvm.com>"]
readme = "README.md"
packages = [{include = "ivm-gui"}]

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = [ { version = "=5.15.10", markers = "sys_platform == 'windows'" },
      { version = "=5.15.2", markers = "sys_platform == 'linux'" } ]

[tool.poetry-pyinstaller-plugin.scripts]
ivm-gui = { source = "ivm-gui/__main__.py", type = "onefile", bundle = true  }

[tool.poetry-pyinstaller-plugin.certifi]
# Section dedicated to certifi, required if certificates must be included in certifi store
append = []

[tool.poetry-pyinstaller-plugin.collect]
# Collect all submodules, data files & binaries for 'package_A' and 'package_B'
all = []


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
